--- a/Chess_Project/Chess_Project.vcxproj
+++ b/Chess_Project/Chess_Project.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="board.cpp" />
     <ClCompile Include="piece.cpp" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
