--- a/Chess_Project/Chess_Project.vcxproj
+++ b/Chess_Project/Chess_Project.vcxproj
@@ -128,12 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="board.h" />
+    <ClInclude Include="manager.h" />
     <ClInclude Include="piece.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="board.cpp" />
+    <ClCompile Include="manager.cpp" />
     <ClCompile Include="piece.cpp" />
-    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
