--- a/Chess_Project/Chess_Project.vcxproj
+++ b/Chess_Project/Chess_Project.vcxproj
@@ -127,12 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\comeWith\Pipe.h" />
+    <ClInclude Include="..\comeWith\stdafx.h" />
+    <ClInclude Include="..\comeWith\targetver.h" />
     <ClInclude Include="board.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="piece.h" />
     <ClInclude Include="player.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\comeWith\Source.cpp" />
+    <ClCompile Include="..\comeWith\stdafx.cpp" />
     <ClCompile Include="board.cpp" />
     <ClCompile Include="manager.cpp" />
     <ClCompile Include="piece.cpp" />
