--- a/Chess_Project/Chess_Project.vcxproj
+++ b/Chess_Project/Chess_Project.vcxproj
@@ -130,18 +130,30 @@
     <ClInclude Include="..\comeWith\Pipe.h" />
     <ClInclude Include="..\comeWith\stdafx.h" />
     <ClInclude Include="..\comeWith\targetver.h" />
+    <ClInclude Include="bishop.h" />
     <ClInclude Include="board.h" />
+    <ClInclude Include="king.h" />
+    <ClInclude Include="knight.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="piece.h" />
     <ClInclude Include="player.h" />
+    <ClInclude Include="pown.h" />
+    <ClInclude Include="queen.h" />
+    <ClInclude Include="roock.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\comeWith\Source.cpp" />
     <ClCompile Include="..\comeWith\stdafx.cpp" />
+    <ClCompile Include="bishop.cpp" />
     <ClCompile Include="board.cpp" />
+    <ClCompile Include="king.cpp" />
+    <ClCompile Include="knight.cpp" />
     <ClCompile Include="manager.cpp" />
     <ClCompile Include="piece.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="pown.cpp" />
+    <ClCompile Include="queen.cpp" />
+    <ClCompile Include="rock.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
