on work on the rook(not finished) and merge piece.h

--- a/Chess_Project/Chess_Project.vcxproj
+++ b/Chess_Project/Chess_Project.vcxproj
@@ -153,7 +153,7 @@
     <ClCompile Include="player.cpp" />
     <ClCompile Include="pown.cpp" />
     <ClCompile Include="queen.cpp" />
-    <ClCompile Include="rock.cpp" />
+    <ClCompile Include="rook.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
